--- a/apps/server/src/views/forgotMail.ejs
+++ b/apps/server/src/views/forgotMail.ejs
@@ -86,7 +86,7 @@
       <div class="content">
         <p>Hi there,</p>
         <p>
-          You recently requested to reset your password for your prakrito account.
+          You recently requested to reset your password for your LMS account.
           Click the button below to reset it:
         </p>
         <div class="button-container">
@@ -98,14 +98,14 @@
         </p>
         <p>
           If you did not request a password reset, please ignore this email or
-          contact us at <a href="mailto:support@prakrito.com">support@prakrito.com</a>.
+          contact us at <a href="mailto:support@lms.edu">support@lms.edu</a>.
         </p>
-        <p>Thanks,<br />The prakrito Team</p>
+        <p>Thanks,<br />The LMS Team</p>
       </div>
       <div class="footer">
         <p>
           Need help? Contact us at
-          <a href="mailto:support@prakrito.com">support@prakrito.com</a>.
+          <a href="mailto:support@lms.edu">support@lms.edu</a>.
         </p>
       </div>
     </div>
